<resources>
    <string name="app_name">SIMC系统</string>
    <!-- Navigation vector URL-->
    <!--<string name="navigation_vector">https://www.arcgis.com/sharing/rest/content/items/dcbbba0edf094eaa81af19298b9c6247/resources/styles/root.json</string>-->
    <string name="navigation_vector">http://58.49.50.98:10011/arcgis/rest/services/wh_4326/MapServer</string>
    <string name="routing_service">https://sampleserver6.arcgisonline.com/arcgis/rest/services/NetworkAnalysis/SanDiego/NAServer/Route</string>
    <!-- Drawer strings-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="progress_title">线路查询</string>
    <string name="progress_message">请稍等...</string>


    <string name="realtime_monitoring">实时监控</string>
    <string name="find_route">线路查询</string>
    <string name="bill_query">单据查询</string>
    <string name="business_query">业务查询</string>
    <string name="personal">个人资料</string>
    <string name="input_number">请输入编号</string>
    <string name="search">搜索</string>
    <string name="search_bills">搜  索</string>
    <string name="search_cache">显示10条记录</string>


    <string name="show_type">查询类型</string>
    <string name="statistics_type">统计类型</string>
    <string name="query_time">查询时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="lock_rate_statistics">关锁使用频率统计</string>
    <string name="route_use_statistics">路径使用频率统计</string>
    <string name="site">所属站点</string>
    <string name="allsite">全部站点</string>
    <string name="fix_password">修改密码</string>
    <string name="set">设置</string>
    <string name="exit">退出</string>
    <string name="usename">账号</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="sequence_number">序号</string>
    <string name="order_number">单据编号</string>
    <string name="order_query_result">单据查询结果</string>
    <string name="order_query_details">单据详情</string>


    <string name="container_size">集装箱尺寸 :</string>
    <string name="container_color">集装箱颜色 :</string>
    <string name="du_number">du编号 :</string>
    <string name="transport_number">转运单据编号 :</string>
    <string name="commodity_number">商品税号 :</string>

    <string name="source_country">起运国 :</string>
    <string name="source_time">起运时间 :</string>
    <string name="cargo_port">装货港 :</string>
    <string name="vehicle">交通工具 :</string>

    <string name="commodity_name">商品名称 :</string>
    <string name="commodity_amount">商品数量 :</string>
    <string name="currency_system">币制 :</string>
    <string name="unit_price">单价 :</string>
    <string name="total_price">总价 :</string>
    <string name="suttle">净重 :</string>
    <string name="rough_weight">毛重 :</string>
    <string name="customs_inspection_results">海关检验结果 :</string>
    <string name="business_query_results">业务查询结果</string>
    <string name="sort">排序</string>
    <string name="sort_ascending">升序</string>
    <string name="grade_down">降序</string>
    <string name="seniority">序号</string>
    <string name="times">次数</string>

    <string name="start_site">起点</string>
    <string name="dest_site">终点</string>
    <string name="choose_the_route">请选择路线</string>


    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <string name="please_choose">请选择</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="data_err_point">不能晚于当前日期</string>
    <string name="select_starttime">请选择开始时间</string>
    <string name="select_endtime">请选择结束时间</string>
    <string name="time_prompt">开始时间不能大于结束时间</string>
    <string name="please_wait_amoment">请稍等...</string>
    <string name="number_no_null">编号不能为空</string>
    <string name="language">语言切换</string>
    <string name="versionName">版本号</string>

    <string name="ch">简体中文</string>
    <string name="en">English</string>
    <string name="pt">Português</string>


    <string name="path_number">路径编号</string>
    <string name="number_plate">车牌号</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="get_time">获取时间</string>
    <string name="vehicle_speed">车辆速度</string>

    <string name="prompt">提示</string>
    <string name="exit_system">是否退出系统</string>

    <string name="all">全部</string>

    <string name="select_date">请选择时间</string>
    <string name="delete_all">清空所有记录</string>
    <string name="user_info">个人信息</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认新密码</string>
    <string name="password_no_empty">密码不能为空</string>

    <!-- code状态码对应提示 -->
    <string name="wrong_account_or_password">用户名或密码错误</string>
    <string name="permission_failed">权限获取失败请手动打开储存和定位权限</string>

    <!-- 各种提示语  -->
    <string name="please_check_your_network">请检查您的网络</string>
    <string name="request_server_failed">请求服务器失败</string>
    <string name="no_data_available_yet">暂无可用数据</string>
    <string name="document_details_not_found">未查询到单据详情信息</string>
    <string name="query_failed">查询失败</string>
    <string name="the_specified_route_was_not_queried">未查询到指定路线</string>
    <string name="the_number_of_the_query_does_not_exist">查询的编号不存在</string>
    <string name="missing_real_time_monitoring_detail_data">实时监控详情数据缺失</string>



<!-- 单据查询详情 也包括共用部分-->

    <!-- 集装箱信息 -->
    <string name="container_info">集装箱信息</string>

    <string name="container_type">集装箱类型</string>
    <string name="container_status">集装箱状态</string>
    <string name="container_number">集装箱编号</string>
    <string name="lock_number">关锁编号</string>
    <string name="customs_number">报关单编号</string>

    <!-- 物流信息 -->
    <string name="logistics_info">物流信息</string>

    <string name="shipping_number">航运号码</string>
    <string name="departure_date">出发日期</string>
    <string name="arrival_date">到达日期</string>
    <string name="date_of_registration_of_the_manifesto">仓单注册日期</string>
    <string name="code_of_the_place_of_departure">出发地点代码</string>
    <string name="code_of_the_place_of_arrival">抵达地点代码</string>
    <string name="transportadora">运输公司</string>
    <string name="shipping_agency">船运代理</string>
    <string name="total_transport_documents">提单数量</string>
    <string name="number_of_volumes">数量</string>
    <string name="total_gross_weight">总毛重</string>
    <string name="vessel_nationality">船舶国籍</string>
    <string name="vessel_name">船名</string>
    <string name="gross_tonnage">总吨位</string>
    <string name="net_tonnage">净吨位</string>
    <string name="containers">集装箱数量</string>

    <!-- 货物信息 -->
    <string name="goods">货物信息</string>

    <string name="bl_number">提单号</string>
    <string name="bl_type">提单类型</string>
    <string name="place_of_unloading">卸载地点</string>
    <string name="importer_name">进口商名</string>
    <string name="goods_description">商品说明</string>
    <string name="goods_origin">原产国</string>
    <string name="customs_value">申报价值</string>
    <string name="currency">货币</string>
    <string name="seal_number">原关锁号</string>
    <string name="code_responsible">施封人员代码</string>
    <string name="bl_status">提单状态</string>
    <string name="volumes_description">货物数量</string>
    <string name="bl_ungrouped_number">提单数量</string>
    <string name="customs_office_of_traffic">中转站点</string>
    <string name="transhipment_place">转运地</string>
    <string name="transit_document">中转单号</string>
    <string name="reference_transbord">转运单号</string>

    <!-- 路线查询 -->
    <string name="please_choose_the_starting_point">请选择起点</string>
    <string name="please_choose_the_end_point">请选择终点</string>

    <string name="number_null">编号不能为空</string>


    <string name="select_from_album">从相册选取</string>
    <string name="photograph">拍照</string>
    <string name="accomplish">完成</string>

    <string name="please_enter_old_password">请输入旧密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="Please_enter_new_password_again">请再次输入新密码</string>
    <string name="old_new_same">新密码与旧密码相同</string>
    <string name="new_no_same">两次输入的新密码不一致</string>
    <string name="error_entering_old_password">输入的旧密码错误</string>
    <string name="successful_password_modification">密码修改成功</string>


    <string name="password_reg">密码必须包含大小写字母和数字，不能包含正反序用户名，同一字符不能超过3次，长度8到32位</string>

    <string name="log_out">确认退出</string>
    <string name="sure_log_out">确定要退出当前账号吗？</string>

    <!--<string name="no_end_point">没有对应终点</string>-->
    <string name="no_end_point">未获取到终点位置信息</string>
    <string name="starting_site">起始站点</string>

    <string name="no_start_point_location_info">未获取到起点位置信息</string>
    <string name="no_valid_path_data">未获取到有效路径数据</string>
    <!--<string name="no_end_point_location_info">未获取到终点位置信息</string>-->


    <string name="no_data">暂无数据</string>
    <string name="number_search_des">支持通过集装箱编号或关锁编号进行查询</string>




</resources>
