<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:callout="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/backwhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_query_details"
            android:textSize="@dimen/text_16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigt_1"
                android:paddingLeft="@dimen/size_10dp"
                android:text="@string/container_info"
                android:gravity="center_vertical"
                android:background="@color/gray_1"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blContainerType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/container_type"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blContainerNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/container_number"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blContainerStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/container_status"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blLockNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/lock_number"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigt_1"
                android:paddingLeft="@dimen/size_10dp"
                android:text="@string/logistics_info"
                android:gravity="center_vertical"
                android:background="@color/gray_1"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blShippingNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/shipping_number"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blDateRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/date_of_registration_of_the_manifesto"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blDepartureDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/departure_date"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blArrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/arrival_date"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCodeDeparture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/code_of_the_place_of_departure"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCodeArrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/code_of_the_place_of_arrival"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blTransportadora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/transportadora"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blShippingAgency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/shipping_agency"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blTotalTD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/total_transport_documents"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blNumberVolumes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/number_of_volumes"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blTotalGrossWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/total_gross_weight"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blVesselNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/vessel_nationality"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blVesselName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/vessel_name"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blGrossTonnage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/gross_tonnage"/>

            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blNetTonnage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/net_tonnage"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blContainers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/containers"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigt_1"
                android:paddingLeft="@dimen/size_10dp"
                android:text="@string/goods"
                android:gravity="center_vertical"
                android:background="@color/gray_1"/>



            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/bl_number"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/bl_type"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blPlaceUnloading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/place_of_unloading"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blImporterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/importer_name"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blGoodsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/goods_description"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blGoodsOrign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/goods_origin"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCustomsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/customs_value"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/currency"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blSealNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/seal_number"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCodeResponsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/code_responsible"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blBlstatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/bl_status"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blVolumesDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/volumes_description"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blUngroupedNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/bl_ungrouped_number"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blCustomsOfficeTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/customs_office_of_traffic"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blTranshipmentPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/transhipment_place"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blTransitDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/transit_document"/>


            <com.esri.arcgisruntime.container.monitoring.view.BillDetailsLinearLayout
                android:id="@+id/blReferenceTransbord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                callout:typeName="@string/reference_transbord"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
