<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/backwhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fix_password"
            android:textSize="@dimen/text_16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp"
            android:text="@string/accomplish"
            android:textSize="@dimen/text_16sp"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/old_password"/>

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:paddingLeft="@dimen/size_10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/please_enter_old_password"
            android:background="#FFFFFF"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginLeft="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/new_password"/>


        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:paddingLeft="@dimen/size_10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/please_enter_new_password"
            android:background="#FFFFFF"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:background="@color/gray_line_middle"/>


    <EditText
        android:id="@+id/etConFirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40dp"
        android:paddingLeft="@dimen/size_10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:hint="@string/Please_enter_new_password_again"
        android:background="#FFFFFF"/>


    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/blue"
        android:visibility="gone"
        android:text="@string/confirm"
        android:textSize="@dimen/title_size"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

</LinearLayout>
