<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_1"
        android:paddingLeft="@dimen/margin"
        android:text="@string/show_type"
        android:gravity="center_vertical"
        android:background="@color/gray_1"/>

    <RelativeLayout
        android:id="@+id/rlSelectNumberType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/tvSelectNumberType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin"
            android:text="@string/container_number"
            android:gravity="center_vertical"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin"
            android:src="@mipmap/pull_down"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:background="@color/gray_1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/margin"
        android:hint="@string/input_number"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:gravity="center_vertical"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigt_1"
        android:paddingLeft="@dimen/margin"
        android:text="@string/query_time"
        android:gravity="center_vertical"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:id="@+id/llStartTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:layout_marginLeft="@dimen/margin"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icback_size"
            android:src="@mipmap/bills"/>

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_starttime"
            android:layout_marginLeft="@dimen/margin"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:id="@+id/llEndTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_marginLeft="@dimen/margin"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/icback_size"
            android:src="@mipmap/bills"/>

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_endtime"
            android:layout_marginLeft="@dimen/margin"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/blue"
        android:text="@string/search_bills"
        android:textSize="@dimen/title_size"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

</LinearLayout>
